# solopreneur

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MIGRATION.md  README.md  SLIDE-DESIGN-BGM-HANDOFF.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex/agents/: marketer.toml
.github/workflows/: sync-vendored.yml  validate-codex.yml  validate-humanly.yml  validate-preview-tests.yml  validate-vendored.yml
agents/: android-dev.md  designer.md  ios-dev.md  llm-dev.md  nextjs-dev.md  python-dev.md  web-dev.md
docs/spec/: 2026-05-01-worktree-handoff-plans-redesign.md  2026-05-09-autopilot-single-pr-mode.md  2026-05-11-ai-app-templates.md  2026-05-11-ios-app-templates.md  2026-07-08-codex-dual-publish.md  2026-07-15-codex-dual-publish-pilot-findings.md
plugins/ai-engineer/skills/ai-app-templates/references/simple-llm-api/: .env.example  README.md  pyproject.toml
plugins/ai-engineer/skills/ai-app-templates/references/simple-llm-api/app/: main.py
plugins/ai-engineer/skills/ai-app-templates/references/simple-llm-api/app/providers/: anthropic_client.py  gemini_client.py  openrouter_client.py
scripts/: codex-manifest-overlays.json  generate-codex-manifests.sh  validate-codex.sh
skills/agent-skill-index/: SKILL.md
skills/android-patterns/: SKILL.md
skills/greenlight/: SKILL.md
skills/gtm/: SKILL.md
skills/humanly/: SKILL.md
skills/ios-patterns/: SKILL.md
skills/linkedin-growth/: SKILL.md
skills/naming/: SKILL.md
skills/perspective/: SKILL.md
skills/post-mortem/: SKILL.md
skills/preflight/: SKILL.md
todos/: README.md
(+553 files in other folders)
