[project]
name = "simple-llm-api"
version = "0.1.0"
description = "Minimal FastAPI service with one pluggable LLM provider."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "openai>=1.50",
]

# All three provider SDKs are listed so the template stays runnable
# regardless of which provider the consuming agent picks. After picking,
# run `uv remove anthropic google-genai openai` for the two unused SDKs.
